project4/db-statefulset.yaml
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: postgres
# spec:
#   serviceName: postgres-svc

#   replicas: 1

#   selector:
#     matchLabels:
#       app: postgres

#   template:
#     metadata:
#       labels:
#         app: postgres

#     spec:
#       containers:
#         - name: postgres
#           image: postgres:16

#           ports:
#             - containerPort: 5432

#           env:
#             - name: POSTGRES_DB
#               valueFrom:
#                 secretKeyRef:
#                   name: postgres-secret
#                   key: POSTGRES_DB

#             - name: POSTGRES_USER
#               valueFrom:
#                 secretKeyRef:
#                   name: postgres-secret
#                   key: POSTGRES_USER

#             - name: POSTGRES_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: postgres-secret
#                   key: POSTGRES_PASSWORD

#           volumeMounts:
#             - name: pgdata
#               mountPath: /var/lib/postgresql/data

#   volumeClaimTemplates:
#     - metadata:
#         name: pgdata
#       spec:
#         accessModes: ["ReadWriteOnce"]
#         resources:
#           requests:
#             storage: 1Gi


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres-svc
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
