project4/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 2

  selector:
    matchLabels:
      app: react

  template:
    metadata:
      labels:
        app: react

    spec:
      containers:
        - name: react
          image: duvindune/repo30:v1.0

          ports:
            - containerPort: 80

          # env:
          #   - name: VITE_SERVER_BASE_URL
          #     value: http://django-svc:8000/api/v1

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
