project4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-test
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: django-mc
spec:
  rules:
  - host: duvindu.org
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: react-svc   # 👈 IMPORTANT
            port:
              number: 80

  - host: www.duvindu.org
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: react-svc
            port:
              number: 80
